add result, graph and plant

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       apprenti explorateur ?
     </p>
   </div>
-  <p id="description"> Explore ton lien avec la nature en découvrant ton profil !
+  <p id="description1"> Explore ton lien avec la nature en découvrant ton profil !
   </p>
   </div>
   <div class="image">
@@ -56,15 +56,16 @@
           <li id="Home"><a href="#Home">Accueil</a></li>
           <li id="profils"><a href="#profils" onclick="toggleList('allprofils')">Les profils</a>
             <ul id="allprofils" class="hidden">
-              <li><a href="#">Jardinier en herbe</a></li>
-              <li><a href="#">Explorateur contemplatif</a></li>
-              <li><a href="#">Méditateur naturel</a></li>
+              <li><a href="#">-Jardinier en herbe</a></li>
+              <li><a href="#">-Explorateur contemplatif</a></li>
+              <li><a href="#">-Méditateur naturel</a></li>
             </ul>
           </li>
           <li id="Activities"><a href="#">Activités</a></li>
           <li id="Podcasts"><a href="#">Podcasts</a></li>
           <li id="Lectures"><a href="#">Lectures</a></li>
           <li id="Reportages"><a href="#">Reportages</a></li>
+          <li id="Plante"><a href="plante.html">Plante</a></li>
         </ul>
       </div>
     </nav>
