--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -16,6 +16,25 @@
     <input type="Mot de passe" name="Mot de passe" required>
     <button type="submit">Login</button>
   </form>
+</body>
+
+</html> -->
+
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>En Développement</title>
+  <link rel="stylesheet" href="login.css">
+</head>
+
+<body>
+  <div class="container">
+    <h1>Site En Développement</h1>
+    <p>Nous travaillons sur quelque chose de génial. Revenez bientôt pour vous connecter.</p>
+  </div>
 </body>
 
 </html>
