--- a/signup.html
+++ b/signup.html
@@ -1,6 +1,6 @@
 <!-- signup.html -->
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -20,6 +20,24 @@
     <input type="password" name="confirmPassword" required>
     <button type="submit">S'inscrire</button>
   </form>
+</body>
+
+</html> -->
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>En Développement</title>
+  <link rel="stylesheet" href="login.css">
+</head>
+
+<body>
+  <div class="container">
+    <h1>Site En Développement</h1>
+    <p>Nous travaillons sur quelque chose de génial. Revenez bientôt pour vous inscrire.</p>
+  </div>
 </body>
 
 </html>
