--- a/resultat.html
+++ b/resultat.html
@@ -1,24 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Résultat</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="resultat.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Résultat</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <link rel="stylesheet" href="resultat.css">
-</head>
-
-<body>
-  <div>
+  <body>
     <div>
-      <h2 id="resultat">Vous êtes plutôt..</h2>
+      <div>
+        <h2 id="resultat">Vous êtes plutôt..</h2>
+      </div>
+      <canvas id="myChart" width="300" height="200"></canvas>
     </div>
-    <canvas id="myChart" width="300" height="200"></canvas>
-  </div>
 
-  <script src="resultat.js"></script>
-</body>
-
+    <script src="resultat.js"></script>
+  </body>
 </html>
