--- a/test.html
+++ b/test.html
@@ -42,6 +42,13 @@
       </div>
       <button class="confirmerslider" onclick="nextQuestionSlider('question2', 'question3', 1)">Confirmer</button>
       <p class="output">0</p>
+      <div class="flower">
+        <div id="flower-part-0" class="flower-part"></div>
+        <div id="flower-part-1" class="flower-part"></div>
+        <div id="flower-part-2" class="flower-part"></div>
+        <div id="flower-part-3" class="flower-part"></div>
+        <div id="flower-part-4" class="flower-part"></div>
+      </div>
     </div>
 
 
@@ -273,7 +280,7 @@
           <button class="confirmer" onclick="nextQuestion('question16', 'question17')" disabled>Confirmer</button>
     </div>
 
-    <div class="question" data-question="question17">
+    <div class="question" data-question="question17">S
       <h2>17/25</h2>
       <h1> Quels types d’activités préféres-tu ? <h1>
           <button
