--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       Explore ton lien avec la nature en découvrant ton profil !
     </p>
     <div class="image">
-      <img src="img/quatre.jpg" alt="first" />
+      <img id="first" src="img/Premiereimage.jpg" alt="first" />
     </div>
     <div>
       <a id="commencer" href="test.html">Commencer le test</a>
