--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Quel est ton éco-profil ?</title>
     <link
       href="https://api.fontshare.com/v2/css?f[]=satoshi@400&display=swap"
       rel="stylesheet"
@@ -14,13 +14,13 @@
   </head>
 
   <body>
-    <h1>Quel est ton éco-profil ?</h1>
+    <h1>Quelle est ta relation avec la nature ?</h1>
     <div>
       <p id="description">
-        Explorateur aventureux, jardinier en herbe, admirateur de la faune,
-        méditateur naturel, artiste botanique, citadin vert, écologiste engagé,
-        explorateur contemplatif, curieux des sciences naturelles ou bien un
-        apprenti explorateur ?
+        Jardinier.ère en herbe, admirateur.rice de la faune, méditateur.rice,
+        curieux.se des sciences, aventurier.ière, artiste passioné.e, citadin.e
+        vert.e, apprenti.e explorateur.rice, contemplatif.ve ou encore
+        écologiste engagé.e.
       </p>
     </div>
     <p id="description1">
@@ -47,8 +47,10 @@
       <!-- Contenu pour l'utilisateur non connecté -->
       <nav id="navbar">
         <ul class="droite">
+          <!--
           <li id="login"><a href="login.html">Connexion</a></li>
           <li id="signup"><a href="signup.html">S'inscrire</a></li>
+          -->
         </ul>
         <div class="lines" onclick="toggleMenu()">
           <div id="firstline"></div>
@@ -64,7 +66,7 @@
               >
               <ul id="allprofils" class="hidden">
                 <li><a href="#">-Jardinier en herbe</a></li>
-                <li><a href="#">-L’Admirateur de la Faune</a></li>
+                <li><a href="#">-L’admirateur de la Faune</a></li>
                 <li><a href="#">-Le Méditateur Naturel</a></li>
                 <li><a href="#">-Le Curieux des Sciences Naturelles </a></li>
                 <li><a href="#">-L’Explorateur Aventureux</a></li>
@@ -88,21 +90,21 @@
       <ul class="profiles-list">
         <li class="profilesdesc">
           <img
-            src="img/L'Admirateur_de_la_Faune.png"
+            src="img/Le.a_jardinier.ère_en_herbe.png"
             alt="Jardinier_en_herbe"
           />
           <a href="profils/Le_jardinier_en_herbe.html">
-            <p class="nomprofil">Le jardinier en herbe</p>
+            <p class="nomprofil">Le.a jardinier.ière en herbe</p>
           </a>
           <p>Son amour pour le jardinage ne connaît pas de limite</p>
         </li>
         <li class="profilesdesc">
           <img
-            src="img/L'Admirateur_de_la_Faune.png"
-            alt="L'Admirateur_de_la_Faune"
+            src="img/L’admirateur.rice_de_la_faune.png"
+            alt="L'Admirateur.rice_de_la_faune"
           />
-          <a href="profils/L'admirateur_de_la_Faune.html">
-            <p class="nomprofil">L'Admirateur de la Faune</p>
+          <a href="profils/L’admirateur.rice_de_la_faune.html">
+            <p class="nomprofil">L'admirateur.rice de la faune</p>
           </a>
           <p>
             Son intérêt pour l'observation passionnée des animaux et de la vie
@@ -110,12 +112,9 @@
           </p>
         </li>
         <li class="profilesdesc">
-          <img
-            src="img/L'Admirateur_de_la_Faune.png"
-            alt="L'Admirateur_de_la_Faune"
-          />
-          <a href="profils/Le_Méditateur_Naturel.html">
-            <p class="nomprofil">Le Méditateur Naturel</p>
+          <img src="img/Le.a_méditateur.rice.png" alt="Le.a Méditateur.rice" />
+          <a href="profils/Le_Méditateur.html">
+            <p class="nomprofil">Le.a méditateur.rice</p>
           </a>
           <p>
             Son aspiration première est de trouver la paix intérieure et la
@@ -124,23 +123,20 @@
         </li>
         <li class="profilesdesc">
           <img
-            src="img/L'Admirateur_de_la_Faune.png"
-            alt="L'Admirateur_de_la_Faune"
+            src="img/Le.a_curieux.se_des_sciences.png"
+            alt="Le.a_curieux.se_des_sciences"
           />
           <a href="profils/Le_Curieux_des_Sciences_Naturelles.html">
-            <p class="nomprofil">Le Curieux des Sciences Naturelles</p>
+            <p class="nomprofil">Le.a curieux.se des Sciences</p>
           </a>
           <p>
             Son intérêt s'étend à de nombreux domaines des sciences naturelles
           </p>
         </li>
         <li class="profilesdesc">
-          <img
-            src="img/L'Admirateur_de_la_Faune.png"
-            alt="L'Admirateur_de_la_Faune"
-          />
-          <a href="profils/L’Explorateur_Aventureux.html">
-            <p class="nomprofil">L’Explorateur Aventureux</p>
+          <img src="img/L'aventurier.ère.png" alt="L'aventurier.ère" />
+          <a href="profils/L'aventurier.ère.html">
+            <p class="nomprofil">L'aventurier.ère</p>
           </a>
           <p>
             Aimant l’aventure et le risque, les nouveaux horizons sont sa tasse
@@ -148,12 +144,9 @@
           </p>
         </li>
         <li class="profilesdesc">
-          <img
-            src="img/L'Admirateur_de_la_Faune.png"
-            alt="L'Admirateur_de_la_Faune"
-          />
-          <a href="profils/L’artiste_botanique.html">
-            <p class="nomprofil">L’artiste botanique</p>
+          <img src="img/L’artiste_passioné.e.png" alt="L’artiste_passioné.e" />
+          <a href="profils/L’artiste_passioné.e.html">
+            <p class="nomprofil">L’artiste passioné.e</p>
           </a>
           <p>
             Son esprit créatif trouve l'inspiration dans les éléments naturels
@@ -162,11 +155,11 @@
         </li>
         <li class="profilesdesc">
           <img
-            src="img/L'Admirateur_de_la_Faune.png"
+            src="img/L’apprenti.e_explorateur.rice.png"
             alt="L'Admirateur_de_la_Faune"
           />
           <a href="profils/Le_citadin_vert.html">
-            <p class="nomprofil">Le citadin vert</p>
+            <p class="nomprofil">Le.a citadin.e vert.e</p>
           </a>
           <p>
             Vivant en milieu urbain, il cherche activement à se connecter avec
@@ -175,21 +168,21 @@
         </li>
         <li class="profilesdesc">
           <img
-            src="img/L'Admirateur_de_la_Faune.png"
-            alt="L'Admirateur_de_la_Faune"
+            src="img/L’apprenti.e_explorateur.rice.png"
+            alt="L’apprenti.e_explorateur.rice"
           />
-          <a href="profils/L’apprenti_explorateur.html">
-            <p class="nomprofil">L’apprenti explorateur</p>
+          <a href="profils/L’apprenti.e_explorateur.rice.html">
+            <p class="nomprofil">L’apprenti.e explorateur.rice</p>
           </a>
           <p>Son amour latent pour le monde naturel est prêt à émerger</p>
         </li>
         <li class="profilesdesc">
           <img
-            src="img/L'Admirateur_de_la_Faune.png"
+            src="img/L’apprenti.e_explorateur.rice.png"
             alt="L'Admirateur_de_la_Faune"
           />
           <a href="profils/L’explorateur_contemplatif.html">
-            <p class="nomprofil">L’explorateur contemplatif</p>
+            <p class="nomprofil">Le.a contemplatif.ve</p>
           </a>
           <p>
             Calme et paisible, il aime les moments de quiétude et d'appréciation
@@ -198,11 +191,12 @@
         </li>
         <li class="profilesdesc">
           <img
-            src="img/L'Admirateur_de_la_Faune.png"
-            alt="L'Admirateur_de_la_Faune"
+            id="ecologisteengagéimg"
+            src="img/L’écologiste_engagé.e.png"
+            alt="L’écologiste_engagé.e"
           />
-          <a href="/profils/L’écologiste_engagé.html">
-            <p class="nomprofil">L’écologiste engagé</p>
+          <a href="/profils/L’écologiste_engagé.e.html">
+            <p id="ecoloengagé" class="nomprofil">L’écologiste engagé.e</p>
           </a>
           <p>
             Passionné, il cherche sans cesse des moyens d'agir pour la
