--- a/resultat.html
+++ b/resultat.html
@@ -5,18 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Résultat</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <link rel="stylesheet" href="resultat.css" />
   </head>
 
   <body>
     <div>
       <div>
-        <h2 id="resultat">Vous êtes plutôt..</h2>
+        <h2 id="resultat">Vous êtes plutôt..</h2
       </div>
-      <canvas id="myChart" width="300" height="200"></canvas>
-    </div>
 
-    <script src="resultat.js"></script>
+      <div>
+        <ul id="profileList">
+          <li id="1"></li>
+          <li id="2"></li>
+          <li id="3"></li>
+          <li id="4"></li>
+          <li id="5"></li>
+          <li id="6"></li>
+          <li id="7"></li>
+          <li id="8"></li>
+          <li id="9"></li>
+          <li id="10"></li>
+        </ul>
+      </div>
+    </div>
+    <script src="resultat.js" type="module"></script>
   </body>
 </html>
